# Aria

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Aria.sln  CMakeLists.txt  README.md  build-debug.bat  build-debug.sh  build-dist.bat  build-dist.sh  build-release.bat  build-release.sh  generate_cmake_ninja_multi_config.bat  generate_cmake_ninja_multi_config.sh  generate_cmake_vs2022.bat  premake5.lua  vcpkg.json
Aria/: Aria.vcxproj  Aria.vcxproj.filters  CMakeLists.txt  RendererAPI.cpp  RendererAPI.h
Aria/res/shaders/: basic.shader  basicSquare.shader  basicTriangle.shader  flatColor.shader  texture.shader
Aria/src/: Aria.h  Aria.hpp  Test.cpp  Test.h  ariapch.cpp  ariapch.h
Aria/src/Aria/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
Aria/src/Aria/Core/: Application.cpp  Application.h  Application.hpp  Base.h  Base.hpp  EntryPoint.h  EntryPoint.hpp  Input.h  Input.hpp  KeyCodes.h  Layer.cpp  Layer.h  Layer.hpp  LayerStack.cpp  LayerStack.h  LayerStack.hpp  Log.cpp  Log.h  Log.hpp  Timestep.h  Timestep.hpp  Window.cpp  Window.h  Window.hpp
Aria/src/Aria/Events/: ApplicationEvent.h  ApplicationEvent.hpp  Event.h  Event.hpp  KeyEvent.h  KeyEvent.hpp  MouseEvent.h  MouseEvent.hpp
Aria/src/Aria/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiLayer.hpp  ImGuiLayerOpenGL.cpp  ImGuiLayerOpenGL.h  ImGuiLayerVulkan.cpp  ImGuiLayerVulkan.h
Aria/src/Aria/Renderer/: Buffer.cpp  Buffer.h  Buffer.hpp  Camera.cpp  Camera.h  Camera.hpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  RenderCommand.cpp  RenderCommand.h  RenderCommand.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  RendererAPI.cpp  RendererAPI.h  RendererApi.cpp  RendererApi.h  RendererApi.hpp  Shader.cpp  Shader.h  Shader.hpp  Texture.cpp  Texture.h  Texture.hpp  VertexArray.cpp  VertexArray.h  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.h
Aria/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGlBuffer.cpp  OpenGlBuffer.h  OpenGlBuffer.hpp  OpenGlContext.cpp  OpenGlContext.h  OpenGlContext.hpp  OpenGlRendererApi.cpp  OpenGlRendererApi.h  OpenGlRendererApi.hpp  OpenGlShader.cpp  OpenGlShader.h  OpenGlShader.hpp  OpenGlTexture2D.cpp  OpenGlTexture2D.h  OpenGlTexture2D.hpp  OpenGlVertexArray.cpp  OpenGlVertexArray.h  OpenGlVertexArray.hpp
Aria/src/Platform/Vulkan/: VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandBuffer.hpp  VulkanDebugMessenger.cpp  VulkanDebugMessenger.h  VulkanDebugMessenger.hpp  VulkanDeviceManager.cpp  VulkanDeviceManager.h  VulkanDeviceManager.hpp  VulkanError.h  VulkanError.hpp  VulkanFunction.cpp  VulkanFunction.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanGraphicsPipeline.hpp  VulkanInstance.cpp  VulkanInstance.h  VulkanInstance.hpp  VulkanLib.cpp  VulkanLib.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRenderPass.hpp  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanRendererApi.cpp  VulkanRendererApi.h  VulkanRendererApi.hpp  VulkanShader.cpp  VulkanShader.h  VulkanShader.hpp  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanSwapChain.hpp
Aria/src/Platform/Windows/: VulkanWindow.cpp  VulkanWindow.h  VulkanWindow.hpp  WindowsInput.cpp  WindowsInput.h  WindowsInput.hpp  WindowsWindow.cpp  WindowsWindow.h  WindowsWindow.hpp
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/assets/shaders/: basicTriangle.glsl  compile.bat  flatColor.glsl  test_multiple_shaders.glsl  texture.glsl
Sandbox/src/: Application.cpp  ExampleLayer.cpp  ExampleLayer.h  ExampleLayer.hpp  SandboxApp.cpp  VulkanLayer.cpp  VulkanLayer.h  VulkanLayer.hpp
